tests/harness/errors/159_self_assign_function_pos.eu
# Trivial self-assignment in function position: f: f(1) always diverges.
out: { f: f(1) }
